# dev-laoz-music-manager

./: .gitignore  Cargo.toml  README.md  config.toml  error.txt  error_again.txt  install-windows.ps1  install.sh
docs/: architecture.md  cli-design.md  install-linux.md  install-windows.md  usage-guide.md
src/: main.rs
src/application/use_cases/: identify_track.rs  mod.rs  playback.rs  rename_track.rs  scan_library.rs  tui.rs
src/domain/entities/: config.rs  track.rs
src/domain/ports/: archive.rs  metadata_extractor.rs  mod.rs  track_repository.rs
src/domain/value_objects/: mod.rs
src/infrastructure/: archive_client.rs  config_loader.rs  mod.rs
src/infrastructure/cli/: mod.rs
src/infrastructure/database/: in_memory_repository.rs  mod.rs  sqlite_repository.rs
src/infrastructure/filesystem/: mod.rs  symphonia_extractor.rs
tests/: fp_debug.rs
