[package]
name = "music-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "uuid"] }
clap = { version = "4.5", features = ["derive"] }
symphonia = "0.5.3"
blake3 = "1.5"
ulid = "1.1"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
walkdir = "2.4"
rodio = "0.17"
crossterm = "0.27"
ratatui = "0.26"
dirs = "6.0.0"
