[package]
name = "music-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "uuid"] }
clap = { version = "4.5", features = ["derive"] }
symphonia = "0.5.3"
blake3 = "1.5"
ulid = "1.1"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
walkdir = "2.4"
rodio = { version = "0.17", features = ["symphonia-all"] }
crossterm = "0.27"
ratatui = "0.26"
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
urlencoding = "2.1"
rusty-chromaprint = "0.3.0"
lofty = "0.23.2"
data-encoding = "2.10.0"
regex = "1.11"
